  * Add new package libkasten2okteta1gui1 and remove libkasten1okteta1gui1.
  * Update install files.
  * Disable build of tests.
  * Update kdesdk-scripts.examples.
  * Update symbols files.
  * Delete kbugbuster commented references in control and remove
    kbugbuster.install and kbugbuster.manpages, dropped upstream.
  * Update copyright file.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Apr 2013 22:58:37 +0200

kdesdk (4:4.8.4+dfsg-1) unstable; urgency=low

  * Team upload.

  [ Pino Toscano ]
  * Improve packages descriptions:
    - kdesdk-dolphin-plugins: mention all the contained plugins.
    - kcachegrind-converters: sort the list of scripts.
    - kdesdk-strigi-plugins: add xliff files.
  * Make kdesdk-dolphin-plugins enhance dolphin.
  * Pass --language=C to dh_installman to avoid its autodetection of the
    language, which causes bogus results due to the script names (all the
    man pages in kdesdk-scripts are in English, anyway). (Closes: #696959)
  * Remove .texi files under GFDL + invariant sections: (Closes: #695701)
    - add prune-nonfree to debian/rules to remove them.
    - add a note on README.source of what we are removing from the original
      tarball.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Confirm symbols files from buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 30 Jan 2013 13:47:01 -0300

kdesdk (4:4.8.4-2) unstable; urgency=low

  * Push to unstable

 -- Sune Vuorela <sune@debian.org>  Thu, 21 Jun 2012 23:41:07 +0200

kdesdk (4:4.8.4-1) experimental; urgency=low

  * Team upload.
  * New upstream release.

  [ Pino Toscano ]
  * Fix typo in kompare's description. (Closes: #670199)

  [ José Manuel Santamaría Lema ]
  * Update build dependencies:
    - Bump kde-sc-dev-latest to 4:4.8.4.
    - Bump kdepimlibs5-dev to >= 4:4.8.
    - Bump libkonq5-dev to >= 4:4.8.
  * Update patches:
    - update dont_export_private_classes.diff.