@@ -10,10 +10,10 @@ override_dh_auto_configure:
 override_dh_install:
 	$(overridden_command)
 ifeq ($(DEB_HOST_ARCH_ENDIAN),little)
-	dh_install --autodest -pokteta-dev usr/include/kasten1/okteta1/structtool.h
-	dh_install --autodest -pokteta-dev usr/include/kasten1/okteta1/structtoolview.h
-	dh_install --autodest -pokteta-dev usr/include/kasten1/okteta1/structurestoolfactory.h
-	dh_install --autodest -pokteta-dev usr/include/kasten1/okteta1/structurestoolviewfactory.h
+	dh_install --autodest -pokteta-dev usr/include/kasten2/okteta1/structtool.h
+	dh_install --autodest -pokteta-dev usr/include/kasten2/okteta1/structtoolview.h
+	dh_install --autodest -pokteta-dev usr/include/kasten2/okteta1/structurestoolfactory.h
+	dh_install --autodest -pokteta-dev usr/include/kasten2/okteta1/structurestoolviewfactory.h
 	dh_install --autodest -pokteta usr/share/kde4/config/okteta-structures.knsrc
 endif
 
